--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         {
           text: "we are but a mosaic of everyone and everything we've ever known.",
         },
+        {
+          text: "30 years from now, it won't matter what shoes you wore, how your hair looked, or what clothes you bought. you will be flattened by an anvil.",
+        },
       ];
 
       function updateTimeAndDate() {
